fix(settings): 🐛 mobile settings modal z-index

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -428,7 +428,7 @@ input[type="checkbox"]:checked + .checkbox-div {
 	/* adding this to have z-index in modal so that nothing overlaps the modal */
 
 	/* adding important as the modal library does not give access to this div and the div already has z-index: auto so we are overriding it */
-	@apply z-10 !important;
+	@apply z-[102] !important;
 }
 
 .menu-wrapper {
